# naga-nlp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  main.py  naga_nlp_demo.py  nagamese_manual_enriched.conll  pyproject.toml  requirements.txt  setup.cfg  setup.py  train_models.py
models/: nagamese_english_spm.vocab
naganlp/: __init__.py  ner_tagger.py  nltk_tagger.py  nmt_translator.py  subword_tokenizer.py  transformer_tagger.py  word_aligner.py
tests/: conftest.py  test_ner_tagger.py  test_nltk_tagger.py  test_package_import.py  test_pos_tagger.py  test_translation.py  test_translator.py
